src/Components/Stationary/Ticket/Ticket.css
.ticket {
    display: flex;
    justify-content: space-between;
    width: 1180px;
    height: 200px;
    border: 4px solid var(--terBGDetail);
    border-radius: 5px;
    background-color: var(--primeBlue);
}

.bezahlen {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 5px;
    border-left: 1px solid var(--secWhite);
    padding-top: 10px;
    padding-bottom: 10px;
    padding-right: 20px;
    padding-left: 20px;
}

.preis_beschreibung {
    display: flex;
    flex-direction: column;
    gap: 5px;
    align-items: center;
    color: var(--secWhite);
}

.warenkorb_button button {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 10px;
    width: 186px;
    height: 80px;
    background-color: var(--primePink);
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

.warenkorb_button a {
    text-decoration: none;
}

.korb_text {
    color: var(--secWhite);
    font-family: 'JetBrains Mono', monospace;
    font-size: 16px;
}

.gesamtpreis_ticket {
    font-size: 14px;
    font-family: 'Roboto', monospace;
}

.preis_ticket {
    font-size: 24px;
    font-family: 'Roboto', monospace;
    text-decoration: none;
}

.beschreibungen {
    display: flex;
    gap: 60px;
    padding-left: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.beschreibung_links {
    display: flex;
    flex-direction: column;
    gap: 12px;
    font-family: 'Roboto', monospace;
    color: var(--secWhite);
    width: 370px;
}

.infos_alle {
    display: flex;
    flex-direction: row;
}

.infos_event {
    display: flex;
    flex-direction: column;
    gap: 15px;
    font-size: 15px;
    width: 205px;
}

.datum_event {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
    font-size: 15px;
}

.standort_event {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
    font-size: 15px;
}

.info_ticket {
    display: flex;
    flex-direction: column;
    gap: 14px;
}

.preis_counter {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.ticket_beschreibung {
    width: 500px;
    height: 160px;
    font-size: 15px;
    font-family: 'Roboto', monospace;
    color: var(--secWhite);
}

.ticket_ueberschrift {
    font-size: 22px;
    display: flex;
    align-items: center;
}

.veranstalter_name {
    font-size: 20px;
}

.hardticket_anzeige {
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.hardticket_anzeige input {
    appearance: none;
    height: 24px;
    width: 24px;
    background-color: transparent;
    border: 1px solid var(--secWhite);;
    border-radius: 5px;
    cursor: pointer;
    display: flex;
    outline: none;
}

.hardticket_anzeige input:checked {
    background-color: var(--primePink);
}

.hardticket_anzeige label {
    font-size: 15px;
    cursor: pointer;
}

.preis_ticket_gesamt {
    font-size: 30px;
}

.ticket_ueberschrift_Name {
    width: 165px;
}

.ticket_ueberschrift_Minus {
    width: 40px;
    text-align: center;
}

